# BrogueCE

./: .astylerc  .clang-format  .gitignore  .gitmodules  BUILD.bazel  BUILD.md  CHANGELOG.md  CHANGELOG_LITE.md  CONTRIBUTING.md  Globals.c  INTEGRATION-PLAN.md  MODULE.bazel  Makefile  Monsters.c  PLAYTEST-GUIDE.md  README-DM-AI.md  README-PLAYTEST.md  README.md  Rogue.h  bazel-build-run.sh  brogue  brogue-multiuser.sh  config.mk  formatter.sh  icon.rc  low_health_patch.diff  make-link-for-desktop.sh  sdl-image.bazel  snapcraft.yaml  test-dm.bat  test-dm.ps1  test-dm.sh
.github/: get-deps-mingw.ps1
android/: .gitignore  settings.gradle.kts
android/SDL2_image/: .gitignore  .gitmodules  .wikiheaders-options  Android.mk  CHANGES.txt  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.os2  README.txt  SDL2_imageConfig.cmake.in  configure  configure.ac  ltmain.sh  sdl2_image-config-version.cmake.in  sdl2_image-config.cmake.in
android/SDL2_image/.github/: fetch_sdl_vc.ps1
android/SDL2_image/.github/actions/setup-ninja/: action.yml
android/SDL2_image/.github/workflows/: main.yml  release.yml
android/SDL2_image/VisualC/: SDL_image.sln  SDL_image.vcxproj  SDL_image.vcxproj.filters  Version.rc
android/SDL2_image/VisualC-WinRT/: SDL_image-UWP.sln  SDL_image-UWP.vcxproj  SDL_image-UWP.vcxproj.filters
android/SDL2_image/Xcode/: Info-Framework.plist  config.xcconfig
android/SDL2_image/Xcode/SDL_image.xcodeproj/: project.pbxproj
android/SDL2_image/Xcode/avif/avif.xcodeproj/: project.pbxproj
android/SDL2_image/Xcode/avif/dav1d/: vcs_version.h
android/SDL2_image/Xcode/avif/dav1d/arm64/: config.h
android/SDL2_image/Xcode/avif/dav1d/armv7/: config.h
android/SDL2_image/Xcode/avif/dav1d/x86_64/: config.h
android/SDL2_image/Xcode/iOS/SDL2.framework/: Info.plist  SDL2
android/SDL2_image/Xcode/iOS/SDL2.framework/Headers/: SDL_assert.h  SDL_cpuinfo.h  SDL_events.h  SDL_gamecontroller.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_main.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_pixels.h  SDL_quit.h  SDL_rect.h  SDL_rwops.h  SDL_scancode.h  SDL_stdinc.h  SDL_surface.h  SDL_types.h  SDL_video.h  SDL_vulkan.h
android/SDL2_image/Xcode/jxl/jxl/: version.h
android/SDL2_image/Xcode/jxl/jxl.xcodeproj/: project.pbxproj
android/SDL2_image/Xcode/macOS/SDL2.framework/Versions/A/: SDL2
android/SDL2_image/Xcode/macOS/SDL2.framework/Versions/A/Headers/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config_macosx.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_opengles.h  SDL_opengles2.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_quit.h  SDL_rect.h  (+16 more)
android/SDL2_image/Xcode/macOS/SDL2.framework/Versions/A/Resources/: Info.plist  default.metallib
android/SDL2_image/Xcode/macOS/SDL2.framework/Versions/A/_CodeSignature/: CodeResources
android/SDL2_image/Xcode/pkg-support/: build.xcconfig
android/SDL2_image/Xcode/pkg-support/resources/: ReadMe.txt
android/SDL2_image/Xcode/tvOS/SDL2.framework/: Info.plist  SDL2  default.metallib
android/SDL2_image/Xcode/tvOS/SDL2.framework/Headers/: SDL.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config_iphoneos.h  SDL_endian.h  SDL_error.h  SDL_filesystem.h  SDL_gesture.h  SDL_joystick.h  SDL_locale.h  SDL_log.h  SDL_messagebox.h  SDL_opengles.h  SDL_opengles2.h  SDL_platform.h  SDL_power.h  SDL_render.h  SDL_sensor.h  SDL_shape.h  SDL_system.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_touch.h  SDL_version.h
android/SDL2_image/Xcode/webp/webp.xcodeproj/: project.pbxproj
android/SDL2_image/acinclude/: libtool.m4  sdl2.m4
android/SDL2_image/build-scripts/: android-prefab.sh  release-info.json  test-versioning.sh  touch-autofoo.sh
android/SDL2_image/cmake/: CommonFindSDL2.cmake  PrivateSdlFunctions.cmake
android/SDL2_image/cmake/test/: CMakeLists.txt
android/SDL2_image/docs/: release_checklist.md
android/SDL2_image/examples/: showanim.c  showimage.c
android/SDL2_image/include/: SDL_image.h
android/SDL2_image/src/: IMG.c  IMG_ImageIO.m  IMG_WIC.c  IMG_avif.c  IMG_bmp.c  IMG_gif.c  IMG_jpg.c  IMG_jxl.c  IMG_lbm.c  IMG_pcx.c  IMG_png.c  IMG_pnm.c  IMG_qoi.c  IMG_stb.c  IMG_svg.c  IMG_tga.c  IMG_tif.c  IMG_webp.c  IMG_xcf.c  IMG_xpm.c  IMG_xv.c  IMG_xxx.c  miniz.h  nanosvg.h  nanosvgrast.h  stb_image.h  tiny_jpeg.h  version.rc
android/SDL2_image/test/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.os2  README.md  main.c  sample.avif  sample.cur  sample.jxl  sample.pcx  sample.pnm  sample.qoi  sample.tga  sample.tif  sample.xcf  sample.xpm
android/app/src/main/jni/: CMakeLists.txt  android-assets.c  android-touch.c  android-touch.h
changes/: +0-armor.md  64-bit-seeds.md  769-fillspawnmap-auto-promotion  770-fix-wizard-mode-mutation  775-auto-rest-already-seen  777-force-weapon  778-fatal-bolt  779-recording-skips  780-discordant-monster  781-created-monster-no-regen  783-fix-push-player-machine-room  785-fix-conjure-crash  787-fix-enchant-rune-identify  792-easy-mode-logic-fixes  793-wizard-mode-menu-selection-fix  803-ally-avoid-invulnerable  HallucinationShrooms.md  Lumenstone-score-fix.md  RunHistoryFix.md  allies-fear-sacs.md  allow-ally-spear-attacks-over-player.md  allow-recording-switch-to-play.md  ally-tint.md  armor-rating-rounding.md  assisted-aiming.md  attack-discordant-allies.md  auto-targeting.md  autoexplore-altar.md  autoexplore-delay.md  autoidentify-wand-of-invisibility-if-telepathic.md  autostop-autopilot.md  beckoning.md  beckoning2.md  brogue-cmd.md  bugfix-grappling-salamander.md  bumping-secret-doors.md  carried-polymorph.md  change-tiles.md  charm-of-teleportation.md  (+166 more)
dm-agent/: .env  (+9 more)
(+321 files in other folders)
