load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "brogue",
    srcs = [
        "src/brogue/Architect.c",
        "src/brogue/Buttons.c",
        "src/brogue/Combat.c",
        "src/brogue/Dijkstra.c",
        "src/brogue/Globals.c",
        "src/brogue/GlobalsBase.c",
        "src/brogue/Grid.c",
        "src/brogue/IO.c",
        "src/brogue/Items.c",
        "src/brogue/Light.c",
        "src/brogue/MainMenu.c",
        "src/brogue/Math.c",
        "src/brogue/Monsters.c",
        "src/brogue/Movement.c",
        "src/brogue/PowerTables.c",
        "src/brogue/Recordings.c",
        "src/brogue/RogueMain.c",
        "src/brogue/SeedCatalog.c",
        "src/brogue/Time.c",
        "src/brogue/Utilities.c",
        "src/brogue/Wizard.c",
        "src/platform/main.c",
        "src/platform/null-platform.c",
        "src/platform/platformdependent.c",
        "src/platform/sdl2-platform.c",
        "src/platform/tiles.c",
        "src/variants/GlobalsBrogue.c",
        "src/variants/GlobalsBulletBrogue.c",
        "src/variants/GlobalsRapidBrogue.c",
        "src/brogue/Globals.h",
        "src/brogue/GlobalsBase.h",
        "src/brogue/Rogue.h",
        "src/platform/PlatformDefines.h",
        "src/platform/platform.h",
        "src/platform/term.h",
        "src/platform/tiles.h",
        "src/variants/GlobalsBrogue.h",
        "src/variants/GlobalsBulletBrogue.h",
        "src/variants/GlobalsRapidBrogue.h",
    ],
    includes = [
        "src/platform",
        "src/brogue",
        "src/variants",
    ],
    deps = [
        "@sdl2",
        "@sdl-image",
    ],
    data = [
        "bin/assets/tiles.png",
    ],
    defines = [
        "DATADIR='.'",
        "TERMINAL='no'",
        "BROGUE_EXTRA_VERSION=''",
        "SDL_PATHS",
        "BROGUE_SDL",
    ],
    copts = [
        "-std=c99",
        "-Wall",
        "-Wpedantic",
        "-Werror=implicit",
        "-Wno-parentheses",
        "-Wno-unused-result",
        "-Wformat",
        "-Werror=format-security",
        "-Wformat-overflow=0",
        "-Wmissing-prototypes",
    ],
)
