load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "sdl-image",
    hdrs = [
      "include/SDL_image.h",
    ],
    includes = [
        "include",
    ],
    srcs = [
        "src/IMG.c",
        "src/IMG_WIC.c",
        "src/IMG_avif.c",
        "src/IMG_bmp.c",
        "src/IMG_gif.c",
        "src/IMG_jpg.c",
        "src/IMG_jxl.c",
        "src/IMG_lbm.c",
        "src/IMG_pcx.c",
        "src/IMG_png.c",
        "src/IMG_pnm.c",
        "src/IMG_qoi.c",
        "src/IMG_stb.c",
        "src/IMG_svg.c",
        "src/IMG_tga.c",
        "src/IMG_tif.c",
        "src/IMG_webp.c",
        "src/IMG_xcf.c",
        "src/IMG_xpm.c",
        "src/IMG_xv.c",
    ],
    deps = [
        "@sdl2",
        "@libpng",
    ],
    defines = [
        "enable_png",
        "enable_png_shared",
        "enable_save_png",
        "LOAD_PNG=1",
    ],
    visibility = ["//visibility:public"],
)
